# disk-simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main2.cpp
CLook_Queue/: CLookQueue.cpp  CLookQueue.h  main.cpp
CommonFiles/: Disk.cpp  Disk.h  Queue.hpp
EventQueue/: DiskDoneEvent.h  EventQueue.cpp  EventQueue.h  EventQueueNode.h  RequestEvent.h  TimerEvent.h
FCFS_Queue/: FCFSQueue.cpp  FCFSQueue.hpp
Look_Queue/: LookQueue.cpp  LookQueue.h  main.cpp
PU_Queue/: PUQueue.cpp  PUQueue.h  main.cpp
ST_Queue/: STQueue.cpp  STQueue.hpp  STQueueNode.cpp  STQueueNode.h  main.cpp
